--- a/views/admin/finance/income.ejs
+++ b/views/admin/finance/income.ejs
@@ -1,8 +1,6 @@
 <% include ../../partials/header_seller %>
 <link rel="stylesheet" href="/stylesheets/css/report.css">
 <link rel="stylesheet" href="/stylesheets/css/admin_order.css">
-
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.1/css/bootstrap-datepicker.min.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script>
@@ -16,7 +14,6 @@
                 <div class="title">Sẽ thanh toán</div>
                 <div class="content">
                     Tổng cộng
-                    
                 </div>
                 <div class="value-report">
                     <%- VND(parseInt(willPay))%>
@@ -76,6 +73,7 @@
         <div class="form-group" style="width: 25%;">
           <label for=""></label>
           <select class="form-control" name="" id="pick-option-report">
+            <option value="">Tùy chọn</option>
             <option value="1">Tuần này</option>
             <option value="2">Tháng này</option>
             <option value="3">3 tháng trước</option>
@@ -117,7 +115,7 @@
                                              <a href="/seller/order/detail/<%-item.orderId%>" class="ct-item-product-name"><%-i.name%></a>
                                              <div><%-i.variant == ''?'': 'Phân loại: ' + i.variant%></div>
                                              <div>x<%-i.amount%></div>
-                                             <% total += i.amount*i.price + i.fee%>
+                                             <% total += (i.amount*i.price - i.amount*i.price*i.discount/100) + i.fee%>
                                          </div>
                                      </div>
                                  </div>
