--- a/views/auth/user/user-order.ejs
+++ b/views/auth/user/user-order.ejs
@@ -45,8 +45,12 @@
             <tbody>
                 <%var i = 0;
                   var total = 0; 
+                  var voucher = 0;
                 %>
-                <%products.forEach(item => { i++;%>
+                <%products.forEach(item => { 
+                    i++;
+
+                %>
                 <tr>
                     <td><%-i%></td>
                     <td>
@@ -81,6 +85,8 @@
                     <td><%-item.amount%></td>
                     <td><%-VND(item.price * item.amount)%></td>
                     <%total += item.price * item.amount;%>
+                    <%voucher = (item.discount/100)*total %>
+                    <% total = total - voucher%>
                 </tr>
                 <%})%>
             </tbody>
@@ -91,16 +97,26 @@
                     Phí vận chuyển
                 </div>
                 <div>
-                    Tổng tiền sản phẩm
+                    Voucher giảm
                 </div>
                 <div>
-                    Cần thanh toán khi nhận hàng!
+                    Tổng tiền sản phẩm
                 </div>
+                <% if (info.payment_id == 1) {%>
+                    <div>
+                        Cần thanh toán khi nhận hàng!
+                    </div>
+                <%} else {%>
+                    <div>
+                        Đã thanh toán VNPay
+                    </div>
+                <%}%>
             </div>
             <div>
                 <div><%-VND(info.shippingfee)%></div>
+                <div><%-VND(-voucher)%></div>
                 <div>
-                   <%-VND(total)%>
+                   <%-VND(total + info.shippingfee)%>
                 </div>
             </div>
         </div>
