--- a/views/shop/cart/checkout.ejs
+++ b/views/shop/cart/checkout.ejs
@@ -1,6 +1,8 @@
 <% include ../../partials/header %>
 <link rel="stylesheet" href="/stylesheets/css/checkout.css">
 <script src="/javascripts/js/buyer/cart.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.js"></script>
 
 <div class="col-lg-12">
     <h1 class="page-header" style="margin-left: 10%;">Thanh toán
@@ -60,11 +62,13 @@
         var arrShop = [];
         var arrShip = [];
         var totalFee = 0;
+        var voucherSale = 0;
         %>
         <%data.forEach((item) => {i++;%>
             <%ship = 0;
-                totalShop = 0;
-            arrShop.push(item.shopId)
+            totalShop = 0;
+            arrShop.push(item.shopId);
+            var iVoucher = 0;
             %>
             <div class="clearfix" style="border: 1px solid rgba(0,0,0,0.09);">
             <div>
@@ -118,18 +122,34 @@
         </div>
             
         <%})%>
+        <% totalFee += ship;%>
     </div>
     <div class="shop-voucher col-sm-12 clearfix">
-        <div class="col-sm-6 voucher" style="display: flex; float: right;">
-            <div class="col-sm-6 title-voucher">
-                <p>Voucher của shop</p>
+        <div class="col-sm-8 voucher" style="display: flex; float: right;">
+            <div class="col-sm-4 title-voucher">
+                <% if (item.voucher) {%>
+                    <i class="fas fa-check code-success"></i> 
+                <%}%>
+                <span>Voucher của shop</span>
             </div>
-            <div class="col-sm-6 btn-voucher">
-               <button style="float: right;" class="btn btn-primary"> Chọn voucher</button>
+            <div class="col-sm-8 btn-voucher">
+                <% if (item.voucher) {
+                    iVoucher = item.voucher.discount * (totalShop)/100;
+                %>
+                    <div class="sale-off"> 
+                        <span><%-VND(iVoucher*-1)%></span>
+                    </div>
+                <%}%>
+                <div class="apply-voucher">
+                    <div style="margin-right: 20px;">
+                        <input type="text" name="voucher" class="form-control code-voucher" value="<%-item.voucher ? item.voucher.code : ''%>">
+                    </div>
+                    <button class="btn btn-primary select-voucher" data-total="<%-totalShop%>" data-shop="<%-item.shopId%>" data-pdv="<%-arrPVD%>">Áp dụng</button>
+                </div>
             </div>
         </div>
     </div>
-    <% totalFee += ship;%>
+    
     <div style="display: flex; float: right; margin: 25px;">
         <div style="margin-right: 20px;">
             <div> 
@@ -143,8 +163,11 @@
             <div>
                 <%-VND(ship)%>
             </div>
-            <div> <%-VND(ship+totalShop)%></div>
-            <%arrShip.push(ship)%>
+            <div class="total-price"> <%-VND(ship+totalShop - iVoucher)%></div>
+            <%
+                arrShip.push(ship);
+                voucherSale += iVoucher;
+            %>
         </div>
     </div>
         </div>
@@ -152,9 +175,8 @@
            
             <%}}%>
            
-            </div>
-           
-
+    </div>
+    
     <div class="f23wB9">
        <div class="qXX2_B">
           <div>
@@ -176,8 +198,10 @@
           <div class="_1i3wS2 lsNObX RihLPS"><%-VND(total)%></div>
           <div class="_1i3wS2 _1X3--o RRMXiE">Phí vận chuyển</div>
           <div class="_1i3wS2 lsNObX RRMXiE"><%-VND(totalFee)%></div>
+          <div class="_1i3wS2 _1X3--o SALES">Tổng voucher giảm giá</div>
+          <div class="_1i3wS2 lsNObX SALES"><%-VND(-voucherSale)%></div>
           <div class="_1i3wS2 _1X3--o _3QL9JJ">Tổng thanh toán:</div>
-          <div class="_1i3wS2 _20-5lO lsNObX _3QL9JJ"><%-VND(total + totalFee)%></div>
+          <div class="_1i3wS2 _20-5lO lsNObX _3QL9JJ"><%-VND(total + totalFee-voucherSale)%></div>
           <div class="_3Q9F5R _1Q3ggw">
              <div class="_2xyh_G">Nhấn "Đặt hàng" đồng nghĩa với việc bạn đồng ý tuân theo <a href="https://shopee.vn/legaldoc/policies/" target="_blank" rel="noopener noreferrer">Điều khoản Shopee</a>
             </div>
@@ -195,5 +219,5 @@
     </div>
  </div>
 
-
 <% include ../../partials/footer %>
+
