--- a/views/admin/finance/incomes.ejs
+++ b/views/admin/finance/incomes.ejs
@@ -1,4 +1,4 @@
-<% include ../../partials/header_seller %>
+<% include ../../partials/header_sellera %>
 <link rel="stylesheet" href="/stylesheets/css/report.css">
 <link rel="stylesheet" href="/stylesheets/css/admin_order.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
@@ -189,4 +189,4 @@
     
 </script>
 
-<% include ../../partials/footer_admin %>
+<% include ../../partials/footer_sellera %>
