--- a/views/partials/header_admin.ejs
+++ b/views/partials/header_admin.ejs
@@ -71,8 +71,9 @@
   <div class="row" style="background-color: #f4f6f8;">
     <div class="col-sm-2 admin_block">
       <div class="admin_title">
-        <i class="fa fa-paw fa-1x" style="color: #51bcda; padding-right: 15px;"></i>
-        <label>Dashboard</label>
+        <a href="/admin" style="color: unset">
+            <label>Dashboard</label>
+        </a>
       </div>
 
       <div class="admin_info">
@@ -81,7 +82,7 @@
         </div>
         <div class="admin_info_details">
          
-          <label class="admin_info_name">Welcome, <label style="color: gray;">hardcode</label></label>
+          <label class="admin_info_name">Welcome, <label style="color: gray;"><%-admin.username%></label></label>
      
           <a href="#">
             <i class="fas fa-circle fa-success"></i>
@@ -147,7 +148,7 @@
                     <table class="table">
                         <tr>
                             <td>
-                                <span class="fas fa-list text-danger"></span><a href="/admin">&ensp;Danh Sách Sản Phẩm</a>
+                                <span class="fas fa-list text-danger"></span><a href="/admin/product">&ensp;Danh Sách Sản Phẩm</a>
                             </td>
                         </tr>
                     </table>
@@ -312,12 +313,7 @@
                     <table class="table">
                         <tr>
                             <td>
-                                <span class="fas fa-list text-danger"></span><a href="{!! url('admin/voucher/list') !!}">&ensp;Danh Sách Khuyến Mãi</a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <span class="fas fa-pencil-alt text-success"></span><a href="{!! url('admin/voucher/add') !!}">&ensp;Thêm Khuyến Mãi</a>
+                                <span class="fas fa-list text-danger"></span><a href="/admin/sales">&ensp;Danh Sách Khuyến Mãi</a>
                             </td>
                         </tr>
                     </table>
@@ -374,5 +370,5 @@
     </div>
     </div>
 
-    <div class="col-sm-10">    
-      <div class="main_container" style="width: 100%; margin: 1% -1%;">
+    <div class="col-sm-10 content-wrap">    
+      <div class="main_container" style="width: 100%; margin: 1% 0;">
