--- a/views/partials/header_seller.ejs
+++ b/views/partials/header_seller.ejs
@@ -68,8 +68,7 @@
   <div class="row" style="background-color: #f4f6f8;">
     <div class="col-sm-2 admin_block">
       <div class="admin_title">
-        <i class="fa fa-paw fa-1x" style="color: #51bcda; padding-right: 15px;"></i>
-        <label>Dashboard</label>
+        <a href="/seller"><label>Dashboard</label></a>
       </div>
 
       <div class="admin_info">
@@ -111,7 +110,7 @@
                     <table class="table">
                         <tr>
                             <td>
-                                <span class="fas fa-list text-danger"></span><a href="/seller">&ensp;Danh Sách Sản Phẩm</a>
+                                <span class="fas fa-list text-danger"></span><a href="/seller/product">&ensp;Danh Sách Sản Phẩm</a>
                             </td>
                         </tr>
                         <tr>
@@ -225,5 +224,5 @@
     </div>
     </div>
 
-    <div class="col-sm-10">    
-      <div class="main_container" style="width: 100%; margin: 1% -1%;">
+    <div class="col-sm-10 content-wrap">    
+      <div class="main_container" style="width: 100%; margin: 1% 5px;">
