--- a/public/stylesheets/css/home.css
+++ b/public/stylesheets/css/home.css
@@ -29,11 +29,11 @@ header .form-inline{
 }
 .icon-link{
 	float: left;
-	margin-top: 38px;
+	margin-top: 30px;
 }
 header a.btn{
 	position: relative;
-	display: inline-block;
+	display: block;
 	text-decoration: none;
 	color: white;
 	width: 35px;
@@ -60,18 +60,18 @@ header a.btn:hover i
 {
 	color: #ffadad;
 }
-header .logo-routine img{
+/* header .logo-routine img{
 	position: absolute;
-	left: 50%;
+	left: 25%;
 	top: 5px;
 	transform: translateX(-50%);
 	max-width: 270px;
 	width: 100%;
-}
+} */
 header .for-user{
 	float: right;
-	margin-top: 19px;
 	margin-right: 55px;
+	width: 50%;
 }
 header .for-user .icon-info{
 	float: right;
@@ -107,9 +107,9 @@ header .for-user .icon-info .far{
 .icon-info .dropdown-menu .dropdown-item {
 	width: 172px;
 }
-header .for-user .group-search{
+/* header .for-user .group-search{
 	float: right;
-}
+} */
 header .for-user .group-search{
 	margin-top: 20px;
 	margin-right: 10px;
@@ -126,7 +126,7 @@ header .for-user .group-search input{
 	font-family: 'Open Sans', sans-serif;
 	font-size: 18px;
 	padding: 5px;
-	width: 150px;
+	width: 70%;
 }
 
 /*.section-slider .image-slider img{
@@ -137,7 +137,6 @@ header .for-user .group-search input{
 nav.navbar{
 	border: none;
 	background: none;
-	margin-top: 50px;
 	margin-bottom: 0px;
 	border-top: none;
 	height: 60px;
@@ -146,6 +145,7 @@ nav.navbar{
 	border-bottom: 1px solid black;
 	height: 60px;
 	z-index: 2;
+	left: 122px;
 }
 nav ul.navbar-nav > li{
 	margin-right: 10px;
@@ -612,3 +612,102 @@ html[xmlns] .clearfix {
     -webkit-font-smoothing: antialiased;
     -webkit-text-size-adjust: 100%;
 }
+.logo-routine{
+	position: absolute;
+	top: 52%;
+	left: 14%;
+	transform: translate(-50%, -50%);
+	width: 150px;
+	height: 150px;
+	background: #111845a6;
+	box-sizing: border-box;
+	overflow: hidden;
+	box-shadow: 0 20px 50px rgb(23, 32, 90);
+	border: 2px solid #2a3cad;
+	color: white;
+	padding: 5px;
+  }
+  
+  .logo-routine:before{
+	content: '';
+	position:absolute;
+	top:0;
+	left:-100%;
+	width:100%;
+	height:100%;
+	background: rgba(255,255,255,0.1);
+	transition:0.5s;
+	pointer-events: none;
+  }
+  
+  .logo-routine:hover:before{
+	left:-50%;
+	transform: skewX(-5deg);
+  }
+  
+  .logo-routine span{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	display: block;
+	box-sizing: border-box;
+	
+  }
+  
+  .logo-routine span:nth-child(1)
+  {
+	transform:rotate(0deg);
+  }
+  .logo-routine span:nth-child(2)
+  {
+	transform:rotate(90deg);
+  }
+  
+  .logo-routine span:nth-child(3)
+  {
+	transform:rotate(180deg);
+  }
+  
+  .logo-routine span:nth-child(4)
+  {
+	transform:rotate(270deg);
+  }
+  
+  .logo-routine span:before
+  {
+	content: '';
+	position: absolute;
+	width:100%;
+	height: 2px;
+	background: #50dfdb;
+	animation: animate 4s linear infinite;
+  }
+  
+  @keyframes animate {
+	0% {
+	transform:scaleX(0);
+	transform-origin: left;
+	}
+	50%
+	{
+	  transform:scaleX(1);
+	transform-origin: left;
+	}
+	50.1%
+	{
+	  transform:scaleX(1);
+	transform-origin: right;
+	  
+	}
+	
+	100%
+	{
+	  transform:scaleX(0);
+	transform-origin: right;
+	  
+	}
+	
+	
+  } 
