--- a/views/admin/order/order.ejs
+++ b/views/admin/order/order.ejs
@@ -46,7 +46,7 @@
     </div>
     <table id="dataTables-example" class="mdl-data-table" style="width:100%">
         <thead>
-            <th>Đơn hàng</th>
+            <th style="padding: 10px;">Đơn hàng</th>
             <th>Người mua</th>
             <th>Sản phẩm</th>
             <th>Tổng hóa đơn</th>
@@ -74,7 +74,11 @@
                                 <div class="ct-item-product-inner">
                                     <div class="product-info">
                                         <a href="/seller/order/detail/<%-item.orderId%>" class="ct-item-product-name"><%-i.name%></a>
-                                        <div><%-i.variant == ''?'': 'Phân loại: ' + i.variant%></div>
+                                        <div class="order-wrap-text">
+                                            <p>
+                                                <%-i.variant == ''?'': 'Phân loại: ' + i.variant%>
+                                            </p>
+                                        </div>
                                         <div>x<%-i.amount%></div>
                                         <% total += (i.amount*i.price - i.amount*i.price*i.discount/100) + i.fee%>
                                     </div>
