--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -65,9 +65,14 @@
                     </a>
                 </div>
                 <div class="logo-routine">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
                 <a href="/">
-                    <img src="/images/logo2.png" style="width: 155px;">
+                    <img src="/images/logo2.png" style="width: 100%; height: 100%;">
                 </a>
+                
                     
                 </div>
                
@@ -109,13 +114,13 @@
                        
                     </div>
                     <div class="group-search">
-                        <input type="text" class="search-text">
-                        <a class="search-btn" href="#"><i class="fas fa-search"></i></a>
+                        <input type="text" class="search-text" id="search-text">
+                        <a class="search-btn btn-search"><i class="fas fa-search"></i></a>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="container">
+        <div class="container" style="width: 922px; margin-top: -40px; margin-left: 20%;">
             <nav class="navbar navbar-expand-lg">
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
                     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
