--- a/views/index.ejs
+++ b/views/index.ejs
@@ -274,7 +274,7 @@
 			<div class="frontSlider" id="frontPage">
 				<div class="MS-content">
 					<div class="item">
-						<div style="display: flex;">
+						<div>
 							<div class="slide-bg">
 								<img src="images/img/home.jpg" alt="ĐẾN VỚI NỘI THẤT <h2>FURNITURE SHOP</h2>">
 							 </div>
