--- a/public/stylesheets/css/first_page.css
+++ b/public/stylesheets/css/first_page.css
@@ -208,10 +208,11 @@
  {
  	color: #717171;
  }
+
  .content_first_page .filter_product .filter_brand, .content_first_page .filter_product .filter_color, .content_first_page .filter_product .filter_size,.content_first_page .filter_product .filter_material, .content_first_page .filter_product .filter_price
  {
- 	margin-left: 30px;
- 	margin-right: 30px;
+ 	margin-left: 7px;
+ 	margin-right: 5px;
  	padding-bottom: 20px;
  	border-bottom: solid 1px #bdbdbddb;
  }
@@ -642,10 +643,7 @@
   }
   
 .star-rating .fa-star{color: yellow;}
-.rating {
-	margin-right: 20px;
-	margin: auto;
-}
+
 
 /*category*/
 .submenu li a, .submenu ul li a {
@@ -663,3 +661,8 @@
 	opacity: 1;
 	height: auto;
 }
+.child_filter_city_checkbox {
+	padding: 0 !important;
+}
+
+  
