--- a/public/stylesheets/slider_item.css
+++ b/public/stylesheets/slider_item.css
@@ -368,7 +368,7 @@ li.dropdown:last-child .dropdown-menu li a
 .frontSlider .MS-content .item .slide-bg img {
     margin-left: 10px;
     display: block;
-    width: 1349px;
+    width: 100%;
     height: 565px;
     background-position: center center;
 }
