--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,7 +5,7 @@
   <title>Document</title>
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
   <link rel="stylesheet" href="https://code.jquery.com/ui/1.9.2/themes/base/jquery-ui.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.css">
   <!-- Style -->
@@ -64,17 +64,17 @@
                     <i class="fab fa-instagram"></i>
                     </a>
                 </div>
-                <div class="logo-routine">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                    <span></span>
                 <a href="/">
-                    <img src="/images/logo2.png" style="width: 100%; height: 100%;">
+                    <div class="logo-routine">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <a href="/">
+                        <img src="/images/logo2.png" style="width: 100%; height: 100%;">
+                    </a> 
+                    </div>
                 </a>
-                
-                    
-                </div>
                
                 <div class="for-user">
                     <div class="icon-info">
