--- a/views/shop/product/products.ejs
+++ b/views/shop/product/products.ejs
@@ -4,6 +4,46 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <link rel="stylesheet" href="https://raw.githubusercontent.com/kartik-v/bootstrap-star-rating/master/css/star-rating.min.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+<style>
+    .read-more-state {
+	display: none;
+  }
+  
+  .read-more-target {
+	opacity: 0;
+	max-height: 0;
+	font-size: 0;
+	transition: .25s ease;
+  }
+  
+  .read-more-state:checked ~ .read-more-wrap .read-more-target {
+	opacity: 1;
+	font-size: inherit;
+	max-height: 999em;
+  }
+  
+  .read-more-state ~ .read-more-trigger:before {
+	content: 'Show more';
+  }
+  
+  .read-more-state:checked ~ .read-more-trigger:before {
+	content: 'Show less';
+  }
+  
+  .read-more-trigger {
+	cursor: pointer;
+	display: inline-block;
+	padding: 0 .5em;
+	color: #666;
+	font-size: .9em;
+	line-height: 2;
+	border: 1px solid #ddd;
+	border-radius: .25em;
+  }
+  .child_filter_brand_checkbox {
+      margin-bottom: 1px;
+  }
+</style>
 
 <div class="container-fluid container content_first_page">
     <div class="row" style="width: 1300px; margin: 0">
@@ -41,6 +81,38 @@
                     <div class="filter_product">
                         <div class="sort_by">
                             <h3 class="title_filter">Bộ lọc</h3>
+                        </div>
+                        <div class="filter_brand">
+                            <h5 class="filter_brand_text">Nơi bán</h5>
+                            <div class="filter_brand_box">
+                                <input type="checkbox" class="read-more-state" id="post-2" />
+                                <ul class="filter_brand_ul read-more-wrap clearfix">
+                                    <%var i = 0;%>
+                                   <%bind.forEach(item => {i++;%>
+                                    <% if (i < 17) {%>
+                                        <li class="child_filter_brand_checkbox child_filter_city_checkbox col-sm-6" style="float: left;">
+                                            <div class="checkboxFive">
+                                                <input type="checkbox" value="<%-item.id%>" id="checkboxFiveInput<%-i%>" name="group_brand[]"/>
+                                                <label for="checkboxFiveInput<%-i%>"></label>
+                                            </div>
+                                            <a class="brand_box" href=""><span class="brand_label"><%-item.name%></span></a>
+                                        </li>
+                                    <%}%>
+                                    
+                                    <% if (i > 17) {%>
+                                        <li class="child_filter_brand_checkbox child_filter_city_checkbox read-more-target col-sm-6" style="float: left;">
+                                            <div class="checkboxFive">
+                                                <input type="checkbox" value="<%-item.id%>" id="checkboxFiveInput<%-i%>" name="group_brand[]"/>
+                                                <label for="checkboxFiveInput<%-i%>"></label>
+                                            </div>
+                                            <a class="brand_box" href=""><span class="brand_label"><%-item.name%></span></a>
+                                        </li>
+                                    <%}%>
+                                   
+                                   <%})%>
+                                </ul>
+                                <label for="post-2" class="read-more-trigger"></label>
+                            </div>
                         </div>
                         <div class="filter_brand">
                             <h5 class="filter_brand_text">Thương hiệu</h5>
@@ -308,25 +380,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="special_details">
-                        <div>
-                        <h5 class="special_details_css">Sản phẩm nổi bật</h3>
-                        </div>
-                        <div style="margin-top: 30px; padding-bottom: 20px;">
-                            
-                            <div class="block_product_special" style="margin: 10px; margin-top: 20px; display: flex;">
-                                <div class="col-sm-5" style="padding: 0;">
-                                    <img class="special_details_image" src="" style="width: 100%;" alt="">
-                                </div>
-                                <div class="col-sm-7 special_details_info">
-                                    <h6 class="special_details_name" style="color: #504d4d; font-family: Lora; font-size: 17px;"><h6>
-                                    <p class="special_details_price">₫</p>
-                                    <a href="/shop/product/" style="color: #F65E39; text-decoration: underline;">Xem chi tiết</a>
-                                </div>
-                            </div>
-                         
-                        </div>
-                    </div>   
+  
                 </div>
                 <div class="khoichua col-sm-9">
                     <div class="select_product clearfix" style="border-bottom: solid 1px #bfbfbf; margin-bottom: 30px;">
@@ -433,6 +487,7 @@
     };
 
     SetRatingStar();
+
 })
 </script>
 <% include ../../partials/footer %>
